--- a/static/index.html
+++ b/static/index.html
@@ -119,60 +119,4 @@
         const downloadLink = document.getElementById('download-link');
         const fileInfoDiv = document.getElementById('file-info');
 
-        let selectedFile = null;
-
-        selectFileBtn.addEventListener('click', () => fileInput.click());
-
-        fileInput.addEventListener('change', () => {
-            if (fileInput.files.length > 0) {
-                // ==========================================================
-                //  **هذا هو السطر الذي تم إصلاحه**
-                //  نختار الملف الأول من قائمة الملفات [0]
-                // ==========================================================
-                selectedFile = fileInput.files[0]; 
-
-                fileInfoDiv.textContent = `الملف المختار: ${selectedFile.name}`;
-                processFileBtn.disabled = false;
-                downloadLink.style.display = 'none';
-                statusDiv.style.display = 'none';
-            }
-        });
-
-        processFileBtn.addEventListener('click', async () => {
-            if (!selectedFile) {
-                alert('الرجاء اختيار ملف أولاً.');
-                return;
-            }
-
-            processFileBtn.disabled = true;
-            selectFileBtn.disabled = true;
-
-            statusDiv.className = 'status processing';
-            statusDiv.innerHTML = 'جاري تحليل الملف بالذكاء الاصطناعي... <div class="spinner"></div>';
-            statusDiv.style.display = 'block';
-            downloadLink.style.display = 'none';
-
-            const formData = new FormData();
-            formData.append('file', selectedFile);
-
-            try {
-                const response = await fetch('/extract', { method: 'POST', body: formData });
-                const result = await response.json();
-
-                if (!response.ok) throw new Error(result.error || 'حدث خطأ غير متوقع');
-                
-                statusDiv.className = 'status success';
-                statusDiv.innerHTML = `<i class="fas fa-check-circle"></i> اكتمل الاستخلاص بنجاح!`;
-                downloadLink.href = result.download_url;
-                downloadLink.style.display = 'inline-block';
-
-            } catch (error) {
-                statusDiv.className = 'status error';
-                statusDiv.innerHTML = `<i class="fas fa-exclamation-triangle"></i> فشل الاستخلاص: ${error.message}`;
-            } finally {
-                selectFileBtn.disabled = false;
-            }
-        });
-    </script>
-</body>
-</html>
+        let selected
